@@ -9,7 +9,12 @@ plugins {
     kotlin("jvm")
 }
 
-tasks.test {
+tasks.withType<Test> {
+    testLogging.showStandardStreams = true
+    jvmArgs = mutableListOf(
+        "--add-opens", "java.base/java.util=ALL-UNNAMED",
+        "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+    )
     useJUnitPlatform()
 }
 
